# project-brown-pants

./: .gitignore  ARCHITECTURE.md  ATTRIBUTION.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  craft.json
content/blueprints/: dive-capsule.json  first-flight.json  harbor-seed.json  sounding-rocket.json  wedge-dart.json
content/missions/: first-hop.ron  liftoff.ron
content/overrides/: example-scenario.ron
content/packs/: core.ron
content/scenarios/: autopilot.ron  dive.ron  first-flight.ron  harbor.ron  launch.ron  play.ron
content/settings/: example-settings.ron
crates/app/: Cargo.toml
crates/app/assets/materials/: ATTRIBUTION.md
crates/app/assets/models/: ATTRIBUTION.md  terrain.glb
crates/app/assets/models/parts/: ATTRIBUTION.md  antenna.glb  battery.glb  bumper.glb  decoupler.glb  dish_large.glb  dish_small.glb  engine_bell.glb  fin.glb  fuel_tank.glb  hatch_rect.glb  hatch_round.glb  motor.glb  nose_cone.glb  rim.glb  seat.glb  seat_leather.glb  solar_panel.glb  solar_panel_2x1.glb  steering_wheel.glb  suspension.glb  tablet.glb  tire.glb
crates/app/assets/shaders/: surface_geomorph.wgsl
crates/app/src/: autopilot_scene.rs  bodies_scene.rs  break_scene.rs  build.rs  bus.rs  check_cli.rs  collide_scene.rs  compartments_scene.rs  craft_library.rs  crash_scene.rs  debug_control.rs  dive_scene.rs  editor.rs  export_cli.rs  floating_origin.rs  flooding_scene.rs  gallery_scene.rs  gamepad.rs  ground.rs  harbor_scene.rs  harness_fixture.rs  input_inject.rs  land_scene.rs  launch_scene.rs  main.rs  materials_scene.rs  moon_scene.rs  net.rs  overlay.rs  parts.rs  pause.rs  planet.rs  play_scene.rs  replay.rs  rover_scene.rs  scenario_scene.rs  scene_cam.rs  scene_water.rs  skins_scene.rs  sparkline.rs  (+6 more)
crates/companion/: Cargo.toml
crates/companion/src/: brain.rs  main.rs
crates/netclient/: Cargo.toml
crates/netclient/src/: ghost.rs  lib.rs  participant.rs  sync.rs
crates/netclient/tests/: participant.rs  sync.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  router.rs  store.rs
crates/server/tests/: server.rs
crates/sim/: Cargo.toml
crates/sim/content/: bodies.ron
crates/sim/golden/: body_digests.txt  surface_heights.txt
crates/sim/src/: active.rs  aero.rs  afloat.rs  attitude.rs  autopilot.rs  ballast.rs  biome.rs  body_asset.rs  body_derive.rs  body_digest.rs  body_library.rs  body_ref.rs  bodygen.rs  breakage.rs  check.rs  collision.rs  collision_detect.rs  command.rs  compartments.rs  contact.rs  contact_surface.rs  content.rs  control.rs  diagnostics.rs  director.rs  export.rs  flight.rs  flooding.rs  fluid.rs  frame.rs  handoff.rs  launch.rs  lib.rs  library.rs  marine.rs  medium.rs  mission.rs  orbit.rs  panel_mesh.rs  persist.rs  (+23 more)
crates/sim/tests/: headless.rs
dev/mcp/: README.md  sounding_mcp.py  test_bridge.py
docs/: README.md  observability.md
skills/: game-editor-ux.md  game-flight-hud.md
