[workspace]
resolver = "2"
members = ["crates/sim", "crates/app", "crates/companion"]

[workspace.package]
version = "0.1.106"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dave <projectbrownpants@scienceranch.com>"]

[workspace.dependencies]
bevy = "0.18.1"
bevy_app = "0.18.1"
bevy_ecs = "0.18.1"
bevy_time = "0.18.1"
bevy_diagnostic = "0.18.1"
bevy_log = "0.18.1"
glam = { version = "0.30", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sounding_sim = { path = "crates/sim" }
