[workspace]
resolver = "2"
members = ["crates/sim", "crates/app", "crates/companion", "crates/server", "crates/netclient"]

[workspace.package]
version = "0.1.210"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dave <projectbrownpants@scienceranch.com>"]

[workspace.dependencies]
bevy = { version = "0.18.1", features = ["basis-universal"] }
bevy_app = "0.18.1"
bevy_ecs = "0.18.1"
bevy_time = "0.18.1"
bevy_diagnostic = "0.18.1"
bevy_log = "0.18.1"
glam = { version = "0.30", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
# `float_roundtrip`: exact f64 parsing, so a serialized body reloads
# bit-identically (WI 889 — snapshot integrity digests must hold for arbitrary
# drawn floats, not just values that survive the default lossy parse).
serde_json = { version = "1", features = ["float_roundtrip"] }
ron = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
sounding_sim = { path = "crates/sim" }

# Dev-build performance (WI 778). A plain `cargo run` is a debug build; at opt-level 0 the engine and
# the procedural surface field (multi-octave noise + craters, sampled thousands of times per frame by
# the rover contact) are ~10-50x slower than optimized — the classic Bevy dev pitfall (moon Test ran
# ~12 fps). Optimize **dependencies** and the **headless sim crate** (the hot noise/physics code) even
# in debug, while keeping the app crate light so incremental rebuilds of scene code stay fast. First
# build is slower (deps compile optimized once, then cached); release is unaffected.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.sounding_sim]
opt-level = 3
