[package]
name = "sounding_sim"
version.workspace = true
edition.workspace = true
description = "Sounding simulation core — headless, rendering-free."

[dependencies]
# INVARIANT (WI 496): this crate is rendering-free. It depends on Bevy SUB-CRATES,
# not the `bevy` umbrella. The umbrella unifies features across the workspace and
# would drag bevy_winit/bevy_render in from the application crate; depending on the
# sub-crates keeps this crate's dependency graph provably free of rendering and
# windowing (verify: `cargo tree -p sounding_sim` shows no bevy_render/bevy_winit).
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_time = { workspace = true }
bevy_diagnostic = { workspace = true }
bevy_log = { workspace = true }
# f64 vector math (DVec2 for orbits, DVec3 for world coordinates). Same glam
# version Bevy uses, so no duplicate build.
# Rendering-free — does not affect the headless invariant. `serde` feature is for
# the command envelope / telemetry serialization (WI 502).
glam = { workspace = true }
serde = { workspace = true }
# JSON encoding for the durable, versioned persistence format (WI 498). Used in
# library code (not just tests), so it is a normal dependency. Rendering-free —
# does not affect the headless invariant.
serde_json = { workspace = true }
parry3d-f64 = "0.28.0"
